# join-the-siege

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app.py  domain.py
src/classifiers/: file_classifier.py  file_converter.py  llm_file_classifier.py  offline_file_classifier.py
tests/: test_app.py
