[project]
name = "join-the-siege"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.4",
    "openai>=1.54.3",
    "pdf2image>=1.17.0",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.17",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 120

[tool.mypy]
files = ["src"]

[[tool.mypy.overrides]]
module = "pdf2image"
ignore_missing_imports = true
